--- a/templates/index.html
+++ b/templates/index.html
@@ -64,10 +64,10 @@
     </select>
 
     <!-- Button to Generate -->
-    <button id="generateButton">GENERATE</button>
+    <button id="generateButton">Gerar Áudio</button>
 
     <!-- Play button -->
-    <button id="playButton">Play</button>
+    <button id="playButton">Tocar amostra</button>
 
     <!-- Download Link -->
     <a id="downloadLink" href="#" download>Download Generated Audio</a>
