--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Audio Generator</title>
-        <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+{% extends "layout.html" %}
 
-</head>
-<body>
-
+{% block main %}
 <div class="container">
     <div class="form-group">
         <label>Selecione o gênero:
@@ -21,13 +10,11 @@
           </select></label>
     </div>
 
-
     <!-- Textbox -->
     <div class="form-group">
         <label for="textbox">Texto para voz</label>
         <textarea class="form-control" id="textbox" rows="3"></textarea>
     </div>
-
 
     <div id="dropdown" class="form-group">
         <label>Selecione uma voz:
@@ -58,7 +45,9 @@
         <audio id="audioPlayer" controls style="display:none;"></audio>
     </div>
 </div>
+{% endblock main %}
 
+{% block script %}
 <script>
     // Define male and female voice options
     const maleOptions = ["Antonio", "Donato", "Fabio", "Humberto", "Julio", "Macerio", "Nicolau", "Valerio"];
@@ -145,6 +134,5 @@
     // Initialize the voices dropdown
     updateVoices();
 </script>
+{% endblock script %}
 
-</body>
-</html>
